[package]
name = "kdetype"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "z" # Optimize for binary size

[dependencies]
dbus = "0.9.7"
egui-miniquad = "0.14.0"
miniquad = "0.3"
egui = "0.21.0"
log = "0.4.19"
thiserror = "1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
